# tszsbi

./: README.md  gencat_from_hmf_histogram.ipynb  plot_full_sample.ipynb  plot_joint.ipynb  plot_sbi_samples.ipynb  pyproject.toml  sbi_draft_script.ipynb  sbi_generate_sims.ipynb  sbi_infer_nle.ipynb  sbi_infer_npe.ipynb  sbi_infer_nre.ipynb  tszpower_cobaya_theory.py  tszpower_input.yaml
XGPaint_check/: ringcheck.ipynb  ringcheck_healpy.ipynb
catalogue_demo/: params_sbi_0.csv  params_sbi_1.csv
catalogue_generated/: catalogue_test_1.npy
cobaya/: tszpower_cobaya_theory.py  tszpower_cobaya_theory_backup.py
covmat/: tszpower_chain.covmat  tszpower_chain_full.covmat
examples/: run_tsz_power.py  run_tsz_with_error.py
input_files/: tszpower_input.yaml  tszpower_input_fg.yaml
notebook/: cl_yy_trispectrum.ipynb  cl_yy_with_derivative.ipynb  compute_tsz_powerspec.ipynb  generate_cnc_cat.ipynb  paint_julia_small_patches.ipynb  plot_cosmology.ipynb  visualize_patch.ipynb
paint_clusters/: load_sample.jl  ps_paint.ipynb
sbi_sim_data/: theta_10ksamps.pt  theta_1ksamps.pt  theta_2ksamps.pt  theta_3ksamps.pt  theta_round10_1k.pt  theta_round1_1k.pt  theta_round2_1k.pt  theta_round3_1k.pt  theta_round4_1k.pt  theta_round5_1k.pt  theta_round6_1k.pt  theta_round7_1k.pt  theta_round8_1k.pt  theta_round9_1k.pt  x_10ksamps.pt  x_1ksamps.pt  x_2ksamps.pt  x_3ksamps.pt  x_round10_1k.pt  x_round1_1k.pt  x_round2_1k.pt  x_round3_1k.pt  x_round4_1k.pt  x_round5_1k.pt  x_round6_1k.pt  x_round7_1k.pt  x_round8_1k.pt  x_round9_1k.pt
tszpower/: __init__.py  config.py  initialise.py  (+29 more)
(+213 files in other folders)
